# zkos-rust

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  NOTICE  QUICKSTART.md  README.md  ZkOS.code-workspace  example.env
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  docs.yml
address/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
address/src/: lib.rs
chain-oracle/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
chain-oracle/src/: block_types.rs  example_main.rs  lib.rs  pubsub_chain.rs  server.rs  threadpool.rs  transaction_types.rs  wallet.rs
docs/: transaction-spec.md  vm-spec
eth_client/: .env  .env.example  .env.test.example  Cargo.toml
eth_client/src/: lib.rs  main.rs
eth_client/src/eth_client/: erc20_contract.rs  eth_client.rs  mod.rs  submit_tx.rs  zkosContract.json  zkos_contract.rs
eth_client/src/ethclient/: ethclient.rs  zkosContract.abi
eth_client/src/event_db/: event_db.rs  mod.rs  sql.rs
eth_client/src/pgsql/: initiate_sql.rs  sql.rs
merkle/: CHANGELOG.md  Cargo.toml  README.md
merkle/src/: lib.rs
mulmsgsig/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
mulmsgsig/docs/: mulmsgsig-spec.md
mulmsgsig/src/: context.rs  errors.rs  lib.rs  multisignature.rs  tests.rs  transcript.rs
rangeproof/: CHANGELOG.md  Cargo.toml  README.md  spec.md
rangeproof/src/: bit_range.rs  lib.rs  range_proof.rs  signed_integer.rs  value.rs
rangeproof/tests/: rangeproof.rs
readerwriter/: CHANGELOG.md  Cargo.toml  README.md
readerwriter/src/: codable.rs  lib.rs  reader.rs  writer.rs
starsig/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
starsig/src/: batch.rs  errors.rs  key.rs  lib.rs  serialization.rs  signature.rs  transcript.rs
transaction/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
transaction/benches/: my_benchmark.rs
transaction/docs/: spec.md
transaction/docs/use-cases/: Readme.md  initialization.md  lending-settlement.md  order-transaction.md
transaction/src/: constants.rs  encode.rs  errors.rs  lib.rs  message.rs  proof.rs  reference_tx.rs  script_tx.rs  serialization.rs  tests.rs  transaction.rs  transfer_tx.rs  tx.rs  types.rs  util.rs  verify_relayer.rs  vm_run.rs
transactionapi/: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md
transactionapi/src/: error.rs  lib.rs  main.rs  service.rs
transactionapi/src/rpcclient/: id.rs  method.rs  mod.rs  raw_request_sample.rs  txrequest.rs  utils.rs  version.rs
transactionapi/src/rpcserver/: error.rs  methods.rs  mod.rs  server.rs  service.rs  threadpool.rs  types.rs
utxo-in-memory/: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  STORAGE_SPEC.md
utxo-in-memory/benches/: .env  utxo_benchmark.rs
utxo-in-memory/src/: error.rs  lib.rs  main.rs  threadpool.rs  types.rs
utxo-in-memory/src/blockoperations/: blockprocessing.rs  genesis_sets.txt  initialset.rs  mod.rs  utxodb_operations.rs
utxo-in-memory/src/blockoperations/test/: block2.txt  block3.txt  genesis_sets_test.txt  resultblock1.txt  resultblock2.txt  resultblock3.txt
utxo-in-memory/src/db/: address_utxo_link.rs  commands.rs  events.rs  inmemory_db.rs  leveldbrep.rs  mod.rs  persistdb.rs  snap_rules.rs  snapshot.rs  sql.rs  types.rs  utxostore copy.rs  utxostore.rs  utxostore_old.rs  utxostore_t.rs  utxostore_tt.rs
utxo-in-memory/src/dbcurd/: initialset.rs  mod.rs
utxo-in-memory/src/pgsql/: initiate_sql.rs  mod.rs  sql.rs  sql_api.rs  test_tx.rs
utxo-in-memory/src/snapshot/: mod.rs  persistdb.rs  snap_rules.rs
utxo-in-memory/src/utxo_set/: genesis_sets.txt  initialset.rs  mod.rs  qqutxo.rs
zkvm/: CHANGELOG.md  Cargo.toml  README.md
zkvm/specs/: DEFINITIONS.md  INSTRUCTIONS.md  OPERATIONS.md  README.md  SECURITY.md  TYPES.md
zkvm/src/: constraints.rs  contract.rs  debug.rs  encoding.rs  errors.rs  lib.rs  ops.rs  predicate.rs  program.rs  prover.rs  scalar_witness.rs  tx.rs  types.rs  verifier.rs  vm.rs  zkos_types.rs
zkvm/tests/: zkvm.rs
