[package]
name = "address"
version = "0.1.0"
authors = [Usman Shahid]
edition = "2021"
license = "Apache-2.0"
#repository = ""
categories = ["cryptography", "blockchain"]
keywords = ["cryptography", "blockchain", "zero-knowledge", "bulletproofs"]

[dependencies]
curve25519-dalek = { version = "3", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }
subtle-encoding = "0.5.1"
hex = "^0.3"
merlin = "2"
sha3 = "0.9.1"
bs58 = "0.4.0"
ripemd = "0.1.3"


[dependencies.quisquis-rust]
#path = "../../quisquis-rust"
git = "ssh://github.com/twilight-project/quisquis-rust.git"
branch = "parallelproof"

[features]
default = []
nightly = ["curve25519-dalek/nightly", "curve25519-dalek/alloc"]


[dev-dependencies]
criterion = "0.2"
serde_json = "1.0"