[package]
name = "address"
version = "0.1.1"
edition = "2021"
description = "A Rust crate for creating, parsing, and validating ZkOS addresses with support for standard and script address types."
repository = "https://github.com/twilight-project/zkos-rust"
homepage = "https://github.com/twilight-project/zkos-rust"
documentation = "https://docs.rs/zkos-address"
readme = "README.md"
categories = ["cryptography", "blockchain", "encoding"]
keywords = ["cryptography", "blockchain", "address", "zkos", "base58", "encoding"]

[dependencies]
curve25519-dalek = { version = "3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
merlin = "2"
sha3 = "0.9.1"
bs58 = "0.4.0"
ripemd = "0.1.3"



[dependencies.quisquis-rust]
git = "https://github.com/twilight-project/quisquis-rust.git"
tag = "Testnet-v1.0.1"

[features]
default = []
nightly = ["curve25519-dalek/nightly", "curve25519-dalek/alloc"]


[dev-dependencies]
criterion = "0.5"
serde_json = "1.0"