[package]
name = "chain-oracle"
version = "0.1.0"
edition = "2021"
description = "A Rust library for connecting to a Cosmos-based blockchain, retrieving, parsing, and analyzing blocks and transactions—designed for integration with ZkOS and related systems."
repository = "https://github.com/twilight-project/zkos-rust"
readme = "README.md"
keywords = ["cosmos", "blockchain", "oracle", "indexer", "zkvm"]
categories = ["cryptography", "blockchain", "data-structures"]

[lib]
name = "chain_oracle"
path = "src/lib.rs"

[dependencies]
serde = "1.0.131"
serde_derive = "1.0.131"
serde_json = "1.0.68"
serde_with = { version = "1.4.0", features = ["json"] }
bincode = "1.3.3"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.22.0"
sha3 = "0.9.1"
sha2 = "0.10.7"
stopwatch = "0.0.7"
lazy_static = "1.4.0"
dotenv = "0.15.0"
