[package]
name = "mulmsgsig"
version = "0.1.0"
edition = "2021"
description = "Multi-message multi-signature scheme for Ristretto255 with batch verification support."
repository = "https://github.com/twilight-project/zkos-rust"
keywords = ["cryptography", "crypto", "signatures", "schnorr", "multi-message", "verification"]
categories = ["cryptography"]
publish = false
rust-version = "1.70"
# documentation = "https://docs.rs/merkle"
# license, repository, authors inherited from [workspace.package]

[dependencies]
thiserror = "1"
merlin = "2"
rand = "0.7"
subtle = "2"
curve25519-dalek = { version = "3", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }

[dependencies.starsig]
path = "../starsig"

[features]
default = []
nightly = ["curve25519-dalek/nightly", "curve25519-dalek/alloc", "subtle/nightly"]


