[package]
name = "rangeproof"
version = "0.1.0"
edition = "2018"

[dependencies]
thiserror = "1"
merlin = "2"
rand = "0.7"
subtle = "2"
curve25519-dalek = { version = "3", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }

[dependencies.bulletproofs]
git = "https://github.com/dalek-cryptography/bulletproofs"
branch = "develop"
features = ["yoloproofs"]

[features]
default = []
nightly = ["curve25519-dalek/nightly", "curve25519-dalek/alloc", "subtle/nightly", "bulletproofs/nightly"]

[dev-dependencies]
criterion = "0.2"

