[package]
name = "readerwriter"
version = "0.1.0"
edition = "2021"
description = "Binary reader/writer traits and utilities for serialization and cryptographic transcripts. Based on Stellar's Slingshot project."
repository = "https://github.com/twilight-project/zkos-rust"
readme = "README.md"
keywords = ["reader", "writer", "serialization", "binary", "merlin"]
categories = ["cryptography", "data-structures"]
publish = false
rust-version = "1.70"
# documentation = "https://docs.rs/"
# license, repository, authors inherited from [workspace.package]

[dependencies]
bytes = { version = "0.5.4", optional = true }
merlin = { version = "2", optional = true }


