[package]
name = "starsig"
version = "0.2.1"
edition = "2021"
description = "A pure-Rust implementation of Schnorr signatures using Ristretto"
repository = "https://github.com/twilight-project/zkos-rust"
readme = "README.md"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "signatures", "schnorr", "batch"]
publish = false
rust-version = "1.70"
# documentation = "https://docs.rs/"
# license, repository, authors inherited from [workspace.package]


[dependencies]
thiserror = "1"
merlin = "2"
rand_core = { version = "0.5", default-features = false }
rand = "0.7"
curve25519-dalek = { version = "3", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }
hex = "^0.4"

[features]
default = []
nightly = ["curve25519-dalek/nightly", "curve25519-dalek/alloc"]
