[package]
name = "transaction"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
#repository = ""
categories = ["cryptography", "blockchain"]
keywords = ["cryptography", "blockchain", "zero-knowledge", "bulletproofs"]
description = "A blockchain VM with QuisQuis transactions and zero-knowledge smart contracts"

[dependencies]
thiserror = "1"
byteorder = "1"
rand = "0.7"
subtle = "2"
curve25519-dalek = { version = "3", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }
subtle-encoding = "0.5.1"
hex = "^0.3"
merlin = "2"
sha3 = "0.9.1"
bs58 = "0.4.0"
serde_bytes = "0.11.9"

[dependencies.quisquis-rust]
path = "../../../quisquis-rust"
# [dependencies.quisquis-rust]
# git = "ssh://github.com/twilight-project/quisquis-rust.git"
# branch = "qqtxapi"

[dependencies.elgamalsign]
path = "../elgamalsign"

[dependencies.bulletproofs]
git = "https://github.com/dalek-cryptography/bulletproofs"
branch = "develop"
features = ["yoloproofs"]

[features]
default = []
nightly = ["curve25519-dalek/nightly", "curve25519-dalek/alloc"]


[dev-dependencies]
criterion = "0.2"
serde_json = "1.0"

