[package]
name = "transaction"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/twilight-project/zkos-rust"
categories = ["cryptography", "blockchain"]
keywords = ["cryptography", "blockchain", "zero-knowledge", "bulletproofs", "confidential", "privacy"]
description ="Confidential transaction system with zero-knowledge proofs for the ZkOS workspace"
readme = "README.md"
rust-version = "1.70"
publish = false
# documentation = "https://docs.rs/"
# license, repository, authors inherited from [workspace.package]

[dependencies]
thiserror = "1"
byteorder = "1"
rand = "0.7"
subtle = "2"
curve25519-dalek = { version = "3", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }
subtle-encoding = "0.5.1"
hex = "^0.3"
merlin = "2"
sha3 = "0.9.1"
bs58 = "0.4.0"
ripemd = "0.1.3"
serde_bytes = "0.11.9"
bincode = "1.3.3"

[dependencies.quisquis-rust]
git = "https://github.com/twilight-project/quisquis-rust.git"
tag = "Testnet-v1.0.1"


[dependencies.zkschnorr]
git = "https://github.com/twilight-project/zk-schnorr.git"
tag = "Testnet-v1.0.0"


[dependencies.address]
path = "../address"

[dependencies.zkvm]
path = "../zkvm"

[dependencies.readerwriter]
path = "../readerwriter"
features = ["merlin"]


[dependencies.bulletproofs]
git = "https://github.com/dalek-cryptography/bulletproofs"
branch = "develop"
features = ["yoloproofs"]

[features]
default = []
nightly = ["curve25519-dalek/nightly", "curve25519-dalek/alloc"]
debug_print = []  # Define a custom feature for enabling debug prints

[dev-dependencies]
criterion = "0.2"
serde_json = "1.0"



