[package]
name = "utxo-in-memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "api_server"
[dependencies]
serde = "1.0.131"
serde_derive = "1.0.131"
serde_json = "1.0.68"
dotenv = "0.15.0"
jsonrpc = "0.12.1"
jsonrpc-http-server = "18.0"
jsonrpc-core = "18.0.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
lazy_static = "1.4.0"
jsonrpsee = "0.16.2"
curve25519-dalek = { version = "3", features = ["serde"] }
merlin = "2"
getrandom = { version = "0.2", default-features = false, features = ["js"] }
uuid = { version = "0.8.2", features = [
    "v4",
    "serde",
] } #https://github.com/serde-rs/serde/issues/324
bincode = "1.3.3"
stopwatch = "0.0.7"
rusty-leveldb = "1.0.6"
hex = "0.4"
rand = "0.7"
tungstenite = "0.15.0"
url = "2.4.0"
postgres = { version = "0.19.2", features = [
    "with-serde_json-1",
    "array-impls",
] }
postgres-types = { version = "0.1.0", features = [
    "derive",
    "with-serde_json-1",
] }
r2d2 = "0.8.9"
r2d2_postgres = "0.18.1"
temp-env = "0.3.4"
prometheus = "0.12"
serde_ini = "0.2"


[dependencies.quisquis-rust]
git = "https://github.com/twilight-project/quisquis-rust.git"
tag = "Testnet-v1.0.0"

[dependencies.transaction]
path = "../transaction"

[dependencies.zkvm]
path = "../zkvm"

[dependencies.address]
path = "../address"

[dependencies.chain-oracle]
path = "../chain-oracle"
