[package]
name = "zkvm"
version = "0.1.0"
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
#repository = "https://github.com/interstellar/zkvm"
categories = ["cryptography", "blockchain"]
keywords = ["cryptography", "blockchain", "zero-knowledge", "bulletproofs"]
description = "A blockchain VM with QuisQuis transactions and zero-knowledge smart contracts"

[dependencies]
thiserror = "1"
byteorder = "1"
merlin = "2"
rand = "0.7"
subtle = "2"
curve25519-dalek = { version = "3", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }
subtle-encoding = "0.5.1"
hex = "^0.3"
bincode = "*"

[dependencies.readerwriter]
path = "../readerwriter"
features = ["merlin"]

[dependencies.merkle]
path = "../merkle"

[dependencies.rangeproof]
path = "../rangeproof"

[dependencies.starsig]
path = "../starsig"

[dependencies.mulmsgsig]
path = "../mulmsgsig"

[dependencies.address]
path = "../address"

#[dependencies.elgamalsign]
#path = "../elgamalsign"

[dependencies.zkschnorr]
git = "ssh://github.com/twilight-project/ZkSchnorr.git"
#path = "../../ZkSchnorr"

[dependencies.bulletproofs]
git = "https://github.com/dalek-cryptography/bulletproofs"
branch = "develop"
features = ["yoloproofs"]

[dependencies.quisquis-rust]
#path ="../../quisquis-rust"
git = "ssh://github.com/twilight-project/quisquis-rust.git"
branch = "update_dark_tx"

[features]
default = []
nightly = ["curve25519-dalek/nightly", "curve25519-dalek/alloc", "bulletproofs/nightly"]


[dev-dependencies]
criterion = "0.2"
serde_json = "1.0"
